@@ -8,7 +8,7 @@
 ## ####ECOSGPLCOPYRIGHTBEGIN####                                            
 ## -------------------------------------------                              
 ## This file is part of eCos, the Embedded Configurable Operating System.   
-## Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+## Copyright (C) 1998, 1999, 2000, 2001, 2002, 2014 Free Software Foundation, Inc.
 ##
 ## eCos is free software; you can redistribute it and/or modify it under    
 ## the terms of the GNU General Public License as published by the Free     
@@ -41,7 +41,7 @@
 #
 # Author(s):      bartv
 # Original data:  gthomas
-# Contributors:
+# Contributors:   jld
 # Date:           1999-06-13
 #
 #####DESCRIPTIONEND####
@@ -58,6 +58,8 @@ cdl_package CYGPKG_HAL_ARM {
         support for this processor architecture. It is also
         necessary to select a specific target platform HAL
         package."
+
+    implements    CYGINT_PROFILE_HAL_MCOUNT
 
     compile       hal_misc.c context.S arm_stub.c hal_syscall.c
 
@@ -380,6 +382,19 @@ cdl_package CYGPKG_HAL_ARM {
             }
         }
 
+    }
+
+    cdl_option CYGBLD_HAL_ARM_MCOUNT {
+        display           "Support call-graph profiling"
+        flavor            bool
+        no_define
+        active_if         CYGPKG_PROFILE_GPROF
+        calculated        CYGPKG_PROFILE_CALLGRAPH
+        requires          { CYGHWR_THUMB implies CYGBLD_ARM_ENABLE_THUMB_INTERWORK }
+        compile           mcount.S
+        description       "
+            Calculate whether mcount functions should be built
+            to support call-graph profiling."
     }
 
     cdl_option CYGBLD_LINKER_SCRIPT {
