@@ -1,3 +1,9 @@
+2014-03-14  John Dallaway  <john@dallaway.org.uk>
+
+	* src/mcount.S: Add mcount functions for call-graph profiling.
+	* cdl/hal_arm.cdl: Add option to build mcount functions.
+	[ Bugzilla 1001959 ]
+
 2011-11-23  Nick Garnett  <nickg@ecoscentric.com>
 
 	* cdl/hal_arm.cdl: Add CDL to control whether both IRQs and FIQs
@@ -1823,7 +1829,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2009, 2014 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
